--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
 
+<!Doctype html>
+<html>
+<head>
+<title>SDLC</title> 
+</head>
+<body>
+<div align="center">
+<h1 style="color:white; background-color:orange;"><u>Software Development Life Cycle</u></h1></div>
+<div align="right"><h3 style="color:magenta; background-color:white;"> Semester:<i>4<sup>th</sup>semester </i><br>Subject:<i>Software Engineering</i><h3>
+</div><br>
+<p style="color:maroon;">The Software Development Life Cycle (SDLC) is a structured process used in software engineering to guide the development of high-quality software.<br>SDLC specifies the task(s) to be performed at various stages by a software engineer or developer. It ensures that the end product is able to meet the customer's expectations and fits within the overall budget. Hence, it's vital for a software developer to have prior knowledge of this software development process. </p><br>
+<div align="center">
+<img src="https://www.zentao.pm/file.php?f=202012/f_14dea8296206cbba7100ffe9d3afd4b7&t=png&o=&s=&v=1606978156" width="400" height="400"><br>
+</div>
+<ol> <u>Key Phases of SDLC </u>:
+<li style="color:blue">Requirements Gathering:
+<p><i>the process of identifying, documenting, and managing the needs and expectations of stakeholders for a project or system </i></p>
+<li style="color:green">System Design:
+<p><i> Creating the architecture, user interface, and database design.</i></p>
+</li>
+<li style="color: brown">Implementation:
+<p><i>the phase where the software design is translated into a functional product through coding, testing, and integration</i></p></li>
+<li style="color:purple">Testing
+<p><i>Evaluating the software for functionality, performance, and security.</i></p></li>
+<li style="color: cyan ">Deployment:
+<p><i> Releasing the software to the intended environment.</i></p></li>
+<li style="color:red">Maintenance:<p><i>Ongoing support, bug fixing, and updates to the software. </i></p></li>
+</ol>
+<h1>SDLC Detailed Explanation:</h1>
+<h1 style="color:blue">1.Requirements Gathering:</h1>
+<div align="center">
+ <h2>Types of Requirements:<h2><br>
+ </div>
+<p><b>Functional Requirements:</b><br> Describe what the software should do (e.g., "The system shall allow users to 
+create accounts.").<br>They describe the specific functions, features, and behaviors that the software must 
+perform to meet the user's needs and achieve the desired outcomes.<br>
+<b>Non-Functional Requirements:</b><br> Describe how the software should perform (e.g., "The system shall  respond to user requests within 2 seconds.").<br> These can be further categorized into: <br>
+<b>* Performance:</b> Speed, scalability, reliability.<br>
+<b>* Security: </b>Protection of data and system.<br>
+<b> * Usability:</b> Ease of use and user experience.<br>
+<b>* Maintainability:</b> Ease of modifying and updating the software.<br>
+<b>* Portability: </b>Ability to run on different platforms.<br>
+<b>Key Activities:</b><br>
+The requirements analysis phase typically consist of four basic activities. <br>
+<b>• Requirement Elicitation <br>
+• Requirement Analysis <br>
+• Requirements Documentation <br>
+• Requirements Validation</b><br>
+<b>Requirement Elicitation: </b>Gathering information from various sources: <br>
+Interviews: Talking to stakeholders directly.<br>
+Surveys: Reaching a wider audience.<br>
+Workshops: Collaborative sessions to brainstorm and refine.<br>
+Document Analysis: Reviewing existing materials.<br>
+Prototyping: Creating early mock-ups to get feedback.<br>
+<b> Requirement Analysis: </b>Clearly understand the user requirements: 
+ Identifying patterns and trends.
+ Resolving conflicts and inconsistencies.<br>
+Prioritizing requirements based on importance.<br>
+Modeling techniques are used to analyse the requirements.<br>
+Modeling: Representing the requirements in different ways: <br>
+Use Case Diagrams: Showing how users interact with the system.<br>
+User Stories: Short, user-focused descriptions of functionality.<br>
+Flowcharts: Visualizing processes and workflows.<br>
+<b> Requirement Documentation:</b> <br>
+After analyzing the requirements, requirements are systematically documented. <br>
+• <b>Requirements Document is called Software Requirements Specification (SRS).</b><br>
+Software Requirements Specification 
+• The SRS document is useful in various contexts: <br>
+• Forms an agreement between the customers and the developers <br>
+• Reduces future reworks </p>
+<img src="" width="400" height="400">
+<h1 style="color:blue">2.System Design :</h1>
+<div align="center">
+ <h2>Types of Design:<h2><br>
+ </div>
+ <h3>UML Diagrams and ER Diagram</h3>
+ <img src="" width="400" height="400">
+ <h1 style="color:blue">3.Implementation :</h1>
+<p>This is where the actual coding takes place. Developers write the software according to the design specifications, using chosen programming languages and technologies. </p><br>
+ <h1 style="color:blue">4.Testing:</h1>
+<div align="center">
+ <h2>Types of Testing:<h2><br>
+ </div>
+ <p> This includes unit testing, integration testing, system testing, and user acceptance testing</p><br>
+ <img src="" width="400" height="400">
+ <h1 style="color:blue">5.Deployment:</h1>
+ <p> Once the software passes all testing phases, it's deployed to the production environment. This may involve installing it on servers, configuring it for users, and migrating data. 
+ </p>
+ <h1 style="color:blue">6.Maintenance:</h1>
+ <p>After deployment, the software needs ongoing maintenance and support. This includes bug fixes, security updates, performance improvements, and adding new features based on user feedback. </p>
+<h2>Comparison table of SDLC Models:</h2>
+<table border="1" style="border-collapse:collapse;" cellpadding="7px" >
+  <tr style="color:white; background-color:green;">
+    <th>MODEL NAME</th>
+    <th>BEST USE CASE</th>
+    <th>DRAWBACKS</th>
+      </tr>
+  <tr>
+    <td>Waterfall</td>
+    <td>Clear, well-defined requirements; stable project; small to medium-sized projects; projects with minimal changes expected</td>
+    <td>Inflexible; difficult to accommodate changes; testing is done late; limited client involvement; no prototyping</td>
+   </tr>
+  <tr>
+    <td>Agile</td>
+    <td>Projects with evolving requirements; frequent changes; client collaboration is crucial; large, complex projects</td>
+    <td>Requires strong communication and collaboration; can be challenging to manage; may lead to scope creep; requires skilled team</td>
+  </tr>
+ <tr>
+    <td>Spiral</td>
+    <td>Projects with high uncertainty, high risk, and complex requirements; projects that need ongoing development and enhancement; frequent changes expected.</td>
+    <td>Can be expensive and time-consuming due to frequent iterations; requires significant risk analysis expertise; can be difficult to manage.</td>
+  </tr>
+</table>
+<h3 style="color: blue">Conclusion:</h3>
+    <p style="color:black; background-color: gravy;">
+        In conclusion, the Software Development Life Cycle provides a vital framework for organizing and managing the complex process of creating software. It ensures that projects are executed in a systematic manner, leading to higher quality products and more efficient development. Choosing the <b>right SDLC model</b> is paramount as it directly impacts project success, adapting to the specific needs and constraints of each software endeavor. A well-chosen model streamlines workflows, facilitates communication, and ultimately delivers robust and reliable software solutions.
+    </p>
+    
+
+</body>
+      </html>
+   
