--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Software Requirements Specification
 • The SRS document is useful in various contexts: <br>
 • Forms an agreement between the customers and the developers <br>
 • Reduces future reworks </p>
-<img src="" width="400" height="400">
+<img src="img.jpg" width="400" height="400">
 <h1 style="color:blue">2.System Design :</h1>
 <div align="center">
  <h2>Types of Design:<h2><br>
