--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@ Software Requirements Specification
  <h2>Types of Design:<h2><br>
  </div>
  <h3>UML Diagrams and ER Diagram</h3>
- <img src="" width="400" height="400">
+ <img src="imguml.jpg" width="400" height="400">
+  <img src="imger.jpg" width="400" height="400">
  <h1 style="color:blue">3.Implementation :</h1>
 <p>This is where the actual coding takes place. Developers write the software according to the design specifications, using chosen programming languages and technologies. </p><br>
  <h1 style="color:blue">4.Testing:</h1>
