--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Software Requirements Specification
  <h2>Types of Testing:<h2><br>
  </div>
  <p> This includes unit testing, integration testing, system testing, and user acceptance testing</p><br>
- <img src="" width="400" height="400">
+ <img src="imgtesting.jpg" width="400" height="400">
  <h1 style="color:blue">5.Deployment:</h1>
  <p> Once the software passes all testing phases, it's deployed to the production environment. This may involve installing it on servers, configuring it for users, and migrating data. 
  </p>
