--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 style="color:white; background-color:orange;"><u>Software Development Life Cycle</u></h1></div>
 <div align="right"><h3 style="color:magenta; background-color:white;"> Semester:<i>4<sup>th</sup>semester </i><br>Subject:<i>Software Engineering</i><h3>
 </div><br>
-<p style="color:maroon;">The Software Development Life Cycle (SDLC) is a structured process used in software engineering to guide the development of high-quality software.<br>SDLC specifies the task(s) to be performed at various stages by a software engineer or developer. It ensures that the end product is able to meet the customer's expectations and fits within the overall budget. Hence, it's vital for a software developer to have prior knowledge of this software development process. </p><br>
+<p style="color:maroon;">The<b> Software Development Life Cycle (SDLC)</b> is a structured process used in software engineering to guide the development of high-quality software.<br>SDLC specifies the task(s) to be performed at various stages by a software engineer or developer. It ensures that the end product is able to meet the customer's expectations and fits within the overall budget. Hence, it's vital for a software developer to have prior knowledge of this software development process. </p><br>
 <div align="center">
 <img src="https://www.zentao.pm/file.php?f=202012/f_14dea8296206cbba7100ffe9d3afd4b7&t=png&o=&s=&v=1606978156" width="400" height="400"><br>
 </div>
