--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Software Requirements Specification
  <h1 style="color:blue">6.Maintenance:</h1>
  <p>After deployment, the software needs ongoing maintenance and support. This includes bug fixes, security updates, performance improvements, and adding new features based on user feedback. </p>
 <h2>Comparison table of SDLC Models:</h2>
-<table border="1" style="border-collapse:collapse;" cellpadding="7px" >
+<table border="1" style="border-collapse:collapse;" cellpadding="7px"  cellspacing="5px">
   <tr style="color:white; background-color:green;">
     <th>MODEL NAME</th>
     <th>BEST USE CASE</th>
