--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <title>SDLC</title> 
 </head>
 <body>
- <iframe 
-  src="tdd.jpg" 
+ <iframe src="tdd.jpg" 
   width="100%" 
   height="600px">
 </iframe>
