--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
 <title>SDLC</title> 
 </head>
 <body>
- <iframe src="A.pdf" 
-  width="100%" 
-  height="600px">
-</iframe>
+ <div style="background-color:pink">
 <div align="center">
-<h1 style="color:white; background-color:orange;"><u>Software Development Life Cycle</u></h1></div>
+<h1 style="color:white; background-color:teal;"><u>Software Development Life Cycle</u></h1></div>
 <div align="right"><h3 style="color:magenta; background-color:white;"> Semester:<i>4<sup>th</sup>semester </i><br>Subject:<i>Software Engineering</i><h3>
 </div><br>
 <p style="color:maroon;">The<b> Software Development Life Cycle (SDLC)</b> is a structured process used in software engineering to guide the development of high-quality software.<br>SDLC specifies the task(s) to be performed at various stages by a software engineer or developer. It ensures that the end product is able to meet the customer's expectations and fits within the overall budget. Hence, it's vital for a software developer to have prior knowledge of this software development process. </p><br>
@@ -122,7 +119,7 @@ Software Requirements Specification
         In conclusion, the Software Development Life Cycle provides a vital framework for organizing and managing the complex process of creating software. It ensures that projects are executed in a systematic manner, leading to higher quality products and more efficient development. Choosing the <b>right SDLC model</b> is paramount as it directly impacts project success, adapting to the specific needs and constraints of each software endeavor. A well-chosen model streamlines workflows, facilitates communication, and ultimately delivers robust and reliable software solutions.
     </p>
     
-
+ </div>
 </body>
       </html>
    
