--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
  <div style="background-color:pink">
 <div align="center">
-<h1 style="color:white; background-color:teal;"><u>Software Development Life Cycle</u></h1></div>
+<h1 style="color: orange; background-color:teal;"><u>Software Development Life Cycle</u></h1></div>
 <div align="right"><h3 style="color:magenta; background-color:white;"> Semester:<i>4<sup>th</sup>semester </i><br>Subject:<i>Software Engineering</i><h3>
 </div><br>
 <p style="color:maroon;">The<b> Software Development Life Cycle (SDLC)</b> is a structured process used in software engineering to guide the development of high-quality software.<br>SDLC specifies the task(s) to be performed at various stages by a software engineer or developer. It ensures that the end product is able to meet the customer's expectations and fits within the overall budget. Hence, it's vital for a software developer to have prior knowledge of this software development process. </p><br>
